# pv281-ludo

./: .gitignore  LICENSE  README.md  data_model.ts
client/: Cargo.toml  Dockerfile  Trunk.toml  default.conf.template  index.html  justfile  package-lock.json  package.json  tailwind.config.js
client/src/: main.rs  routes.rs
client/src/bindings/: copy-to-clipboard.js  mod.rs  set-body-overflow.js
client/src/components/: mod.rs
client/src/components/board/: mod.rs
client/src/components/board_middle/: mod.rs
client/src/components/button/: mod.rs
client/src/components/card/: mod.rs
client/src/components/content/: mod.rs
client/src/components/copy_bar/: mod.rs
client/src/components/dialogs/: mod.rs  winner_dialog.rs
client/src/components/die/: mod.rs
client/src/components/field/: mod.rs
client/src/components/fields/: mod.rs
client/src/components/icon/: mod.rs
client/src/components/pawn/: mod.rs
client/src/context/: mod.rs
client/src/css/: output.css
client/src/models/: color.rs  die_info.rs  game.rs  messages.rs  mod.rs  player.rs
client/src/pages/: game.rs  game_join.rs  game_lobby.rs  home.rs  mod.rs  not_found.rs
client/src/types/: mod.rs
client/src/utils/: clamp.rs  color_to_name.rs  get_host.rs  mod.rs  resolve_color.rs
server/: .env.example  Cargo.toml  Dockerfile
server/src/: main.rs
server/src/components/: mod.rs
server/src/models/: actor_messages.rs  app_data.rs  color.rs  game.rs  mod.rs  player.rs  position.rs
server/src/types/: mod.rs
server/src/utils/: bot.rs  dice.rs  enums.rs  game.rs  mod.rs  player.rs
(+36 files in other folders)
